WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201107
REGRESSION (18E140): String check: “realtime” Suggesting “real time”
https://bugs.webkit.org/show_bug.cgi?id=201107
Summary
REGRESSION (18E140): String check: “realtime” Suggesting “real time”
Peng Liu
Reported
2019-08-23 16:55:17 PDT
INSTRUCTIONS: Please check following strings in glossaries. ACTUAL RESULTS: realtime SUGGESTION: real time SUMMARY: OED has only a double word ‘real time’ should this string be two words? DATA: key id: return to realtime origin: WebCore/System/Library/Frameworks/WebKit.framework/Versions/A/Frameworks/WebCore.framework/Versions/A/Resources/en.lproj/Localizable.strings note: accessibility label for return to real time button source: return to realtime
Attachments
A patch
(2.18 KB, patch)
2019-08-23 17:56 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
A updated patch
(2.22 KB, patch)
2019-08-23 18:13 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-08-23 16:59:41 PDT
<
rdar://problem/54660521
>
Peng Liu
Comment 2
2019-08-23 17:14:20 PDT
<
rdar://problem/46372620
>
Peng Liu
Comment 3
2019-08-23 17:56:07 PDT
Created
attachment 377188
[details]
A patch
Peng Liu
Comment 4
2019-08-23 18:13:22 PDT
Created
attachment 377192
[details]
A updated patch
WebKit Commit Bot
Comment 5
2019-08-28 19:40:43 PDT
Comment on
attachment 377192
[details]
A updated patch Clearing flags on attachment: 377192 Committed
r249233
: <
https://trac.webkit.org/changeset/249233
>
WebKit Commit Bot
Comment 6
2019-08-28 19:40:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug