REGRESSION: String check: “realtime” Suggesting “real time” https://bugs.webkit.org/show_bug.cgi?id=201107 <rdar://problem/46372620>

Patch by Peng Liu <peng.liu6@apple.com> on 2019-08-28
Reviewed by Jer Noble.

Update Localizable.strings.

No new test.

* en.lproj/Localizable.strings:
* platform/LocalizedStrings.cpp:
(WebCore::localizedMediaControlElementString):

Canonical link: https://commits.webkit.org/214932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249233 268f45cc-cd09-0410-ab3c-d52691b4dbfc